# twijournal

./: .coveragerc  .env.template  .gitignore  Posterr_Insomnia_Collection.json  README.md  TwiJournal_Insomnia_Collection.json  alembic.ini  docker-compose.yml  dockerfile  pyproject.toml
migrations/: env.py  migration_helper.py
migrations/seed/: followers.json  posts.json  posts_statistics.json  users.json  users_statistics.json
migrations/versions/: 10425b750690_create_users_statistcs_table.py  2d324ae9bc42_create_post_daily_control_table.py  81445603f267_create_user_table.py  bd16e2d83455_create_post_table.py  ff902946565b_create_followers_table.py
tests/: posterr_basic_test.py
tests/entities/followers/: followers_test.py
tests/entities/user/: user_test.py
tests/use_cases/: post_use_case_test.py  user_use_case_test.py
twijournal/: main.py
twijournal/adapters/endpoints/rest_fastapi/: __init__.py  fastapi_injector.py
twijournal/adapters/endpoints/rest_fastapi/controllers/: feed_controller.py  post_controller.py  seed_controller.py  user_controller.py
twijournal/adapters/gateway/sql_alchemy/: database.py
twijournal/business_rules/exceptions/: user_exceptions.py
twijournal/business_rules/use_cases/: post_use_case.py  user_use_case.py
twijournal/entities/: crud_repository.py
twijournal/entities/followers/: repository.py  schema.py
twijournal/entities/post/: repository.py  schema.py
twijournal/entities/user/: repository.py  schema.py
twijournal/infrastructure/: config.py  jwt_generator.py
(+11 files in other folders)
